<resources>
    <string name="app_name">Graduation Planer</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_e_mail">Enter E-Mail</string>
    <string name="welcome_title">Welcome</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password:</string>
    <string name="create">Create</string>
    <string name="sign_in_or_create_an_account">Sign in or create an account</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name_not_found">Unable to get user name</string>
    <string name="your_plans">Your Plans</string>
    <string name="enter_plan_name">Enter Plan Name</string>
    <string name="save">Save</string>
    <string name="create_plan">Create New Plan</string>
    <string name="edit_plan">Edit Plan</string>
    <string name="delete">delete</string>
    <string name="done">done</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="create_user_failed">Failed to create user</string>
    <string name="failed_signin">Sing in Failed, try again</string>
    <string name="semester_list">Semester List</string>
    <string name="enter_semester_name">Enter Semester Name</string>
    <string name="course_list">Course List</string>
    <string name="edit_semester">Edit Semester</string>
    <string name="add_course">Add Course</string>
    <string name="course_data">courses</string>
    <string name="delete_semester">Delete Semester</string>
    <string name="delete_semester_question">Are you sure you want to delete this semester?</string>
    <string name="delete_plan">Delete Plan</string>
    <string name="delete_plan_message">Are you sure you want to delete this plan?</string>
    <string name="course">Course</string>
    <string name="course_name">Course Name:</string>
    <string name="course_id">Course ID:</string>
    <string name="course_already_added">Course Added Already</string>
</resources>
